# serializer version: 1
# name: test_climate_snapshot[climate.test_thermostat_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 28,
      'min_temp': 12,
      'target_temp_step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-1-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Test Thermostat 1',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 28,
      'min_temp': 12,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 0.1,
      'temperature': 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30,
      'min_temp': 15,
      'target_temp_step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-2-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.6,
      'friendly_name': 'Test Thermostat 2',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30,
      'min_temp': 15,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 0.1,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 25,
      'min_temp': 14,
      'target_temp_step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-3-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.6,
      'friendly_name': 'Test Thermostat 3',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 25,
      'min_temp': 14,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.1,
      'temperature': 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 32,
      'min_temp': 10,
      'preset_modes': list([
        'none',
        'eco',
        'boost',
        'manual',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'homee',
    'unique_id': '00055511EECC-4-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_thermostat_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.6,
      'friendly_name': 'Test Thermostat 4',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 32,
      'min_temp': 10,
      'preset_mode': 'none',
      'preset_modes': list([
        'none',
        'eco',
        'boost',
        'manual',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 0.5,
      'temperature': 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
